--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="header-container">
     <div class="header">
+        <!-- Just random logo -->
         <div class="logo-container" routerLink="/ads">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0kJ1egqdu7Z3-HEJZxg6rdtotw3_qktoYzg&usqp=CAU" class="logo">
         </div>
