--- a/src/app/client/cabinete/cabinete.component.html
+++ b/src/app/client/cabinete/cabinete.component.html
@@ -1,7 +1,7 @@
 <div class="cabinet-background"  (click)="closeCabinet(false)">
     <div appClickStopPropagination class="cabinet-window">
-        <div class="cabinet-btn"><div>My ads</div></div>
-        <div class="cabinet-btn"><div>Chat with admin</div></div>
+        <div routerLink="client/my_page" class="cabinet-btn"><div>My page</div></div>
+        <div routerLink="client/admin_chat" class="cabinet-btn"><div>Chat with admin</div></div>
         <div class="cabinet-btn"><div>Sign out</div></div>
     </div>
 </div>
