--- a/src/app/client/create-new-ad-page/create-new-ad-page.component.html
+++ b/src/app/client/create-new-ad-page/create-new-ad-page.component.html
@@ -11,24 +11,25 @@
         </div>
         <div class="ad-adress-input input-container">
             <label for="adress">Adress</label>
-            <div id="adress">
+            <div class="adress" id="adress">
                 <select type="text">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    <option>6</option>
+                    <option>Minsk region</option>
+                    <option>Vitebsk region</option>
+                    <option>Mogilev region</option>
+                    <option>Gomel region</option>
+                    <option>Grodno region</option>
+                    <option>Brest region</option>
                 </select>
                 <select type="text">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    <option>6</option>
+                    <option>Minsk</option>
+                    <option>Molodechno</option>
+                    <option>Logoisk</option>
+                    <option>Soligorsk</option>
+                    <option>Borisov</option>
+                    <option>Volozhin</option>
                 </select>
                 <input type="text" placeholder="Street">
+                <input type="text" placeholder="House">
             </div>
 
         </div>
