--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer class="footer-container">
     <div class="footer">
         <div class="contact-container">
-            <p class="footer-text">You can contact us</p>
-            <p class="footer-text"><strong>+375292626262</strong></p>
+            <p>You can contact us</p>
+            <p><strong>+375292626262</strong></p>
         </div>
         <div class="social-wrapper">
-            <div class="footer-text">Our socials</div>
+            <div>Our socials</div>
             <div class="social-container">
                 <a href="http://www.facebook.com" target="_blank" class="social facebook"></a>
                 <a href="http://www.instagram.com" target="_blank" class="social instagram" ></a>
