--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,9 +1,9 @@
 <div class="admin-wrapper">
     <div class="admin-container">
         <nav>
-            <div><a routerLink="/admin/moderation">moderation</a></div>
-            <div><a routerLink="/admin/edit">edit</a></div>
-            <div><a routerLink="/admin/appeals">appeals</a></div>
+            <div class="admin-nav-btn" routerLink="/admin/moderation" routerLinkActive="admin-nav-btn-active">Moderation</div>
+            <div class="admin-nav-btn" routerLink="/admin/edit" routerLinkActive="admin-nav-btn-active">Edit</div>
+            <div class="admin-nav-btn" routerLink="/admin/appeals" routerLinkActive="admin-nav-btn-active">Appeals</div>
         </nav>
         <router-outlet></router-outlet>
     </div>
