--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,17 @@
-
-
 .app-wrapper {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
 }
 
 .container {
     flex: 1 0 auto;
 
     display: flex;
-    /* flex-direction: column; */
+
     justify-content: center;
     text-align: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     min-width: 300px;
     min-height: 84vh;
-    /* margin: 20px 0; */
-    /* margin-top: -20px; */
-    /* margin-top: 20px;
-    margin-bottom: -20px; */
 }
