--- a/src/app/client/create-new-ad-page/create-new-ad-page.component.css
+++ b/src/app/client/create-new-ad-page/create-new-ad-page.component.css
@@ -6,7 +6,14 @@
     align-items: center;
     width: 100%;
     height: 80vh; 
+    
 }
+
+.page-title {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 #title {
     width: 100%;
 }
@@ -29,12 +36,29 @@
 
     width: min(500px, 80vw);
     height: min(200px, 10vh);
+    margin: 5px 0;
 }
+
+
 
 .input-container {
     display: flex;
     flex-direction: column;
     text-align: left;
+}
+
+.adress {
+    display: grid;
+    -ms-grid-row-align: center;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    width: 100%;
+}
+
+.adress > select,input {
+    box-sizing: border-box;
+    width: min(240px, 80vw);
+    padding: 5px;
+    margin: 5px 0;
 }
 
 .add-photo-btn {
