--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="ads-container">
-    <div *ngFor="let ad of ads" class="ad">
+    <div  *ngFor="let ad of ads" class="ad" (click)="chosenAdFunc(ad.id)" routerLink="/chosen_ad">
         <div class="ad-picture" [style.background-color]="ad.pic" ></div>
         <div class="ad-date">{{ad.date}}</div>
         <div class="ad-information">
