feature/1,8,4,31,9,23,15(after PR)

--- a/src/app/admin/ads-moderation/ads-moderation.component.html
+++ b/src/app/admin/ads-moderation/ads-moderation.component.html
@@ -6,18 +6,16 @@
                 <th>City</th>
                 <th>Date</th>
                 <th>Price</th>
-                <!-- <th></th> -->
                 <th></th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let ad of ads">
+            <tr *ngFor="let ad of ads; trackBy: trackByFn">
                 <td>{{ad.title}}</td>
                 <td>{{ad.location}}</td>
                 <td>{{ad.date}}</td>
                 <td>{{ad.price}} $</td>
-                <!-- <td><button>Edit</button></td> -->
                 <td><button>Publish</button></td>
                 <td><button>Refusal</button></td>
             </tr>
