--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,79 +1,81 @@
 .header-container {
-    display: flex;
+  display: flex;
 
-    justify-content: center;
+  justify-content: center;
 
-    width: 100%;
-    min-height: 7vh;
+  width: 100%;
+  min-height: 7vh;
 
-    background-color: #2E5DFA;
+  background-color: #2e5dfa;
 }
 
 .header {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 
-    width: 1440px;
-    padding: 15px 0 ;
-    border-bottom: 2px solid #162D7A;
+  width: 75vw;
+  padding: 1.5vh 0;
+  border-bottom: 2px solid #162d7a;
 }
 
 .logo-container {
-    height: 50px;
-    cursor: pointer;
+  height: max(40px, 5vh);
+  cursor: pointer;
 }
 
 .logo {
-    height: 50px;
+  border-radius: 5px;
+  height: max(40px, 5vh);
 }
 
 .header-buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 180px;
-    height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 13vw;
+  min-width: 184px;
+  height: 40px;
 }
 
+
+
 .add-new-button {
-    color: rgb(255, 255, 255);
-    border: 2px solid #162D7A;
-    background-color: #2B2D85;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: all .2s;
-    padding: 7px;
-    
+  color: rgb(255, 255, 255);
+  border: 2px solid #162d7a;
+  background-color: #2b2d85;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.2s;
+  padding: 7px;
+
 }
 
 .add-new-button:hover {
-    background-color: #3e40bb;
+  background-color: #3e40bb;
 }
 
 .sign-in-button {
-    background-color: white;
-    border-radius: 10px;
-    border: 2px solid #162D7A;
-    cursor: pointer;
-    transition: all .2s;
-    padding: 7px;
-    
+  background-color: white;
+  border-radius: 10px;
+  border: 2px solid #162d7a;
+  cursor: pointer;
+  transition: all 0.2s;
+  padding: 7px;
 }
 
 .sign-in-button:hover {
-    background-color: rgb(224, 224, 250);
+  background-color: rgb(224, 224, 250);
 }
 
 .cabinet-button {
-    color: white;
-    padding: 10px;
-    border: 2px solid rgb(2, 0, 114);
-    border-radius: 50%;
-    background-color: rgb(89, 29, 255);
-    cursor: pointer;
-
+  color: white;
+  padding: 10px;
+  border: 2px solid rgb(2, 0, 114);
+  border-radius: 50%;
+  background-color: rgb(89, 29, 255);
+  cursor: pointer;
 }
 
 .cabinet-button:hover {
-    background-color: rgb(129, 85, 252);
+  background-color: rgb(129, 85, 252);
 }
