--- a/src/app/admin/ads-editing/ads-editing.component.html
+++ b/src/app/admin/ads-editing/ads-editing.component.html
@@ -7,19 +7,15 @@
                 <th>Date</th>
                 <th>Price</th>
                 <th></th>
-                <!-- <th></th> -->
-                <!-- <th></th> -->
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let ad of ads">
+            <tr *ngFor="let ad of ads; trackBy: trackByFn">
                 <td>{{ad.title}}</td>
                 <td>{{ad.location}}</td>
                 <td>{{ad.date}}</td>
                 <td>{{ad.price}} $</td>
                 <td><button>Edit</button></td>
-                <!-- <td><button>Publish</button></td> -->
-                <!-- <td><button>Refusal</button></td> -->
             </tr>
         </tbody>
     </table>
