--- a/src/app/authorization/authorization.component.css
+++ b/src/app/authorization/authorization.component.css
@@ -1,20 +1,19 @@
 .auth-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 
-    z-index: 200;
+  z-index: 200;
 
-    background-color: rgba(145, 145, 145, .3);
-    
+  background-color: rgba(145, 145, 145, 0.3);
 }
