--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,75 +1,63 @@
 .footer-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    width: 100%;
-    min-height: 7vh;
+  width: 100%;
+  height: 7vh;
 
-    color: white;
-    background-color: #162D7A;
-
-    padding: 10px 0;
+  color: white;
+  background-color: #162d7a;
+  font-size: max(0.8rem, 1vw);
+  padding: 1vh 0;
 }
 
 .footer {
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
 
-    width: 1440px;
+  width: 75vw;
 }
 
 .contact-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 60px;
-}
-
-.footer-text {
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .social-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .social-container {
-    display: flex;
-    justify-content: space-between;
-    min-width: 200px;
+  display: flex;
+  justify-content: space-between;
+  width: max(150px, 10vw);
 }
 
-/* .social-block {
-    height: 40px;
-    width: 40px;
-} */
-
 .social {
-    height:40px;
-    width: 40px;
-
+  height: max(30px, 4vh);
+  width: max(30px, 4vh);
 }
 
 .instagram {
-    background: url(../../app/pngs/instagram.png) no-repeat center;
-    background-size: 100%;
+  background: url(../../app/pngs/instagram.png) no-repeat center;
+  background-size: 100%;
 }
 
 .facebook {
-    background: url(../../app/pngs/facebook.png) no-repeat center;
-    background-size: 100%;
+  background: url(../../app/pngs/facebook.png) no-repeat center;
+  background-size: 100%;
 }
 
 .telegram {
-    background: url(../../app/pngs/telegram.png) no-repeat center;
-    background-size: 100%;
+  background: url(../../app/pngs/telegram.png) no-repeat center;
+  background-size: 100%;
 }
 
 .vk {
-    background: url(../../app/pngs/vk.png) no-repeat center;
-    background-size: 100%;
+  background: url(../../app/pngs/vk.png) no-repeat center;
+  background-size: 100%;
 }
