--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,18 @@
 <header class="header-container">
     <div class="header">
-        <!-- Just random logo -->
         <div class="logo-container" routerLink="/ads">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0kJ1egqdu7Z3-HEJZxg6rdtotw3_qktoYzg&usqp=CAU" class="logo">
+            <img [src]='logo' class="logo" >
         </div>
         <div class="header-buttons">
-            <button *ngIf="loggedIn" class="add-new-button" routerLink="create">+ Add new ad</button>
-            <button *ngIf="!loggedIn" class="add-new-button" (click)="changeAuth()">+ Add new ad</button>
-            <button *ngIf="!loggedIn" class="sign-in-button" (click)="changeAuth()">Sign in</button>
-            <div *ngIf="loggedIn" class="cabinet-button" (click)="openCabinetFunc(true)">M</div>
+            <ng-container *ngIf="loggedIn">
+                <button class="add-new-button" routerLink="create">+ Add new ad</button>
+                <div class="cabinet-button" (click)="openCabinet = true">M</div>    
+            </ng-container>
+            <ng-container *ngIf="!loggedIn">
+                <button class="add-new-button" (click)="changeAuthHidding.emit(true)">+ Add new ad</button>
+                <button class="sign-in-button" (click)="changeAuthHidding.emit(true)">Sign in</button>
+            </ng-container>
         </div>
     </div>
 </header>
-<app-cabinete *ngIf="openCabinet" (closeCabinetFunc)="openCabinetFunc(false)"></app-cabinete>
+<app-cabinete *ngIf="openCabinet" (closeCabinetFunc)="openCabinet= false"></app-cabinete>
