--- a/src/app/client/cabinete/cabinete.component.html
+++ b/src/app/client/cabinete/cabinete.component.html
@@ -1,7 +1,8 @@
-<div class="cabinet-background"  (click)="closeCabinet(false)">
+<div class="cabinet-background" (click)="closeCabinet(false)">
     <div appClickStopPropagination class="cabinet-window">
-        <div class="cabinet-btn"><div>My ads</div></div>
-        <div class="cabinet-btn"><div>Chat with admin</div></div>
+        <div routerLink="/client/my_ads" class="cabinet-btn"><div>My ads</div></div>
+        <div routerLink="/client/create" class="cabinet-btn" routerLinkActive="cabinet-btn-active"><div>Create new ad</div></div>
+        <div routerLink="/client/chat_with_admin" class="cabinet-btn"><div>Chat with admin</div></div>
         <div class="cabinet-btn"><div>Sign out</div></div>
     </div>
 </div>
