--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,12 @@
 <header class="header-container">
     <div class="header">
-        <!-- Just random logo -->
-        <div class="logo-container" routerLink="/ads">
+        <div class="logo-container" [routerLink]="'/'+router.main.routeMain">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0kJ1egqdu7Z3-HEJZxg6rdtotw3_qktoYzg&usqp=CAU" class="logo">
         </div>
         <div class="header-buttons">
-            <button *ngIf="loggedIn" class="add-new-button" routerLink="create">+ Add new ad</button>
             <button *ngIf="!loggedIn" class="add-new-button" (click)="changeAuth()">+ Add new ad</button>
             <button *ngIf="!loggedIn" class="sign-in-button" (click)="changeAuth()">Sign in</button>
+            <button *ngIf="loggedIn" class="add-new-button" [routerLink]="router.client.clientChild.create">+ Add new ad</button>
             <div *ngIf="loggedIn" class="cabinet-button" (click)="openCabinetFunc(true)">M</div>
         </div>
     </div>
