--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,14 +1,14 @@
 <div class="ads-container">
-    <div *ngFor="let ad of ads" class="ad">
-        <div class="ad-picture" [style.background-color]="ad.pic" ></div>
-        <div class="ad-date">{{ad.date}}</div>
+    <div  *ngFor="let ad of ads; trackBy: trackByFn" class="ad" (click)="chosenAdFunc(ad.id)" [routerLink]="'/'+routes.routeChosenAd">
+        <img class="ad-picture" [src]="ad.pic" width="100%" height="auto">
+        <div class="ad-date">{{ad.date | date:'dd.MM.YYYY'}}</div>
         <div class="ad-information">
             <div class="ad-title-div">{{ad.title}}</div>
-            <div class="ad-cost-div">{{ad.price}}$</div>
+            <div class="ad-cost-div">{{ad.price | currency: 'USD'}}</div>
             <div class="ad-location-div">{{ad.location}}</div>
         </div>
     </div>
-    <div routerLink="/map" class="minimap">
+    <div [routerLink]="'/'+routes.routeMap" class="minimap">
         Watch on map
     </div>
 </div>
